- Add data-telse and data-telse-condition tags?
- Add data-tswitch expression and data-tcase expression?
- Implement adquisition?

New in 0.34.0
- Add new command: update?
- Add options.bind (boolean) to set the list of properties to bind?

New in 0.33.0
- Added support of folder dictionaries.

New in 0.32.1
- Bug fixed: contents of metalFillSlot must not be evaluated.

New in 0.32.0
- New configuration option added: dictionaryExtension.

New in 0.31.1
- Bug fixed: malformed auto define tag in autoDefineHelper in some cases.

New in 0.31.0
- Nocall expression replaced by suffix in data-tdefine.
- Rerun bugs fixed using data-idomain, data-ilanguage, data-ton-error, data-trepeat, internal and external macros.

New in 0.30.0
- scopeCache class removed, replaced by scopeBuilder: it traverses the DOM from a node to its parents to get all data-tdefine tags and execute them in reverse order.
- Added command configuration option. Valid values are preload, fullRender or partialRender.

New in 0.29.0
- Save every scope into a cache, set an id to it and put it in HTML using a data-tscope tag to make it easy to re-render.
- Exported method removed: buildParser. The only exported method is run. First invokation preloads external resources (i18n files and external macros files), the next ones parser the DOM. 

New in 0.28.0
- Added setErrorFunction method to context. It manages initialization errors (trying to load external files like external template files or i18n files).
- Added errorCallback parameter to init method of Parser class. It also manages initialization errors. If an errorCallback is defined is used; otherwise errorFunction in context is used.

New in 0.27.0
- Add to dictionary context object.
- Name of window and context vars in dictionary can be configured in context.

New in 0.26.0
- setExternalMacroPrefixURL method in context replaced by externalMacroPrefixURL conf property.

New in 0.25.0
- Auto load of i18n files at init.