@@ -39,7 +39,7 @@ attribute_map_statement    ::= Name
                     If the expression associated with an attribute assignment evaluates to <code>undefined</code>, then that attribute is deleted from the statement element. Each attribute assignment is independent, so attributes may be assigned in the same statement in which some attributes are deleted and others are left alone.
                 </p>
                 <p>
-                    If you use <em>data-tattributes</em> on an element with an active <a href="attributes-TALReplace.html">data-treplace</a> command, the <em>data-tattributes</em> statement is ignored.
+                    If you use <em>data-tattributes</em> on an element with an active <a href="attributes-TALOmitTag.html">data-tomit-tag</a> or <a href="attributes-TALReplace.html">data-treplace</a> command, the <em>data-tattributes</em> statement is ignored.
                 </p>
                 <p>
                     If you use <em>data-tattributes</em> on an element with a <a href="attributes-TALRepeat.html">data-trepeat</a> statement, the replacement is made on each repetition of the element, and the replacement expression is evaluated fresh for each repetition.
