@@ -88,17 +88,17 @@ zpt.run({
                     Repeat variables provide information about the current repetition. The following attributes are available on ‘repeat’ variables:
                 </p>
                 <ul>
-                    <li><em>index</em>. Repetition number, starting from zero.</li>
-                    <li><em>number</em>. Repetition number, starting from one.</li>
-                    <li><em>even</em>. True for even-indexed repetitions (0, 2, 4, …).</li>
-                    <li><em>odd</em>. True for odd-indexed repetitions (1, 3, 5, …).</li>
-                    <li><em>start</em>. True for the starting repetition (index 0).</li>
-                    <li><em>end</em>. True for the ending, or final, repetition.</li>
-                    <li><em>length</em>. Length of the sequence, which will be the total number of repetitions.</li>
-                    <li><em>letter</em>. Repetition letter, starting from a.</li>
-                    <li><em>Letter</em>. Repetition letter, starting from A.</li>
-                    <li><em>roman</em>. Repetition roman number, starting from i.</li>
-                    <li><em>Roman</em>. Repetition roman number, starting from I.</li>
+                    <li><em>index()</em>. Repetition number, starting from zero.</li>
+                    <li><em>number()</em>. Repetition number, starting from one.</li>
+                    <li><em>even()</em>. True for even-indexed repetitions (0, 2, 4, …).</li>
+                    <li><em>odd()</em>. True for odd-indexed repetitions (1, 3, 5, …).</li>
+                    <li><em>start()</em>. True for the starting repetition (index 0).</li>
+                    <li><em>end()</em>. True for the ending, or final, repetition.</li>
+                    <li><em>length()</em>. Length of the sequence, which will be the total number of repetitions.</li>
+                    <li><em>letter()</em>. Repetition letter, starting from a.</li>
+                    <li><em>Letter()</em>. Repetition letter, starting from A.</li>
+                    <li><em>roman()</em>. Repetition roman number, starting from i.</li>
+                    <li><em>Roman()</em>. Repetition roman number, starting from I.</li>
                 </ul>
 
                 <pre class="brush: html">
